ICE-9937 additional fixes for height and overflow
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@45815 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/splitpane/splitpane.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/splitpane/splitpane.css
@@ -18,6 +18,7 @@
     margin: 0;
     display:inline-block;
     vertical-align:top;
+    overflow-y: hidden;
 }
 .ace-splitpane-scrollable {   
     margin:0;
